infra/k8s/movies.yaml
apiVersion: v1
kind: Pod
metadata:
  name: posts
spec:
  containers:
    - name: posts
      image: ganavijayaram/movies:0.0.1
