infra/k8s/movies-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movies-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movies
  template:
    metadata:
      labels:
        app: movies
    spec:
      containers:
        - name: movies
          image: ganavijayaram/movies
---
apiVersion: v1
kind: Service
metadata:
  name: movies-clusterip-srv
spec:
  selector:
    app: movies
  ports:
    - name: movies
      protocol: TCP
      port: 4002
      targetPort: 4002
