infra/k8s/movies-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: movies-srv
spec:
  type: NodePort
  selector:
    app: movies
  ports:
    - name: movies
      protocol: TCP
      port: 4002
      targetPort: 4002
