infra/k8s/reviews-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews
  template:
    metadata:
      labels:
        app: reviews
    spec:
      containers:
        - name: reviews
          image: ganavijayaram/reviews
---
apiVersion: v1
kind: Service
metadata:
  name: reviews-srv
spec:
  selector:
    app: reviews
  ports:
    - name: reviews
      protocol: TCP
      port: 4001
      targetPort: 4001
