infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    #This is to tell ingress controller that we are trying to feed it rules
    #by scanning all the objects and the config files
    kubernetes.io/ingress.class: nginx
  labels:
    name: ingress
spec:
  #teaching ingress about the rules
  rules:
  - host: movies.com
    http:
      paths:
      - pathType: Prefix
        path: "/movies"
        backend:
          service:
            name: movies-clusterip-srv
            port: 
              number: 4002
